--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,6 +5,7 @@ compatibility_date = "2025-01-06"
 main = "worker.js"
 
 routes = [{ pattern = "signal.portl.cam", custom_domain = true }]
+assets = { directory = "./public/" }
 
 # For local testing, you might define:
 [dev]
