--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,20 +1,17 @@
 name = "portlsignal"
 compatibility_date = "2025-01-06"
 
-# If you're using the 'wrangler' CLI, define your main script:
 main = "worker.js"
 
 routes = [{ pattern = "signal.portl.cam", custom_domain = true }]
 assets = { directory = "./public/" }
 
-# For local testing, you might define:
 [dev]
 port = 8787
 
-# wrangler.toml (wrangler v3.88.0^)
 [observability.logs]
 enabled = true
 
 [[kv_namespaces]]
-binding = "SIGNALING_KV"
-id = "portl-signal-kv"
+binding = "PORTAL_KV"
+id = "dd32dbb082834438a2605347fac64675"
