--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,7 @@ compatibility_date = "2025-01-06"
 
 main = "worker.js"
 
-routes = [{ pattern = "signal.portl.cam", custom_domain = true }]
+routes = [{ pattern = "portl.cam", custom_domain = true }]
 assets = { directory = "./public/" }
 
 [dev]
