--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.15.2",
+    "@cloudflare/workers-types": "^4.20251127.0",
     "@eslint/js": "^9.33.0",
     "@types/dom-webcodecs": "^0.1.17",
     "@types/w3c-image-capture": "^1.0.11",
     "esbuild": "^0.27.0",
     "eslint": "^9.33.0",
     "tsx": "^4.20.6",
-    "typescript-eslint": "^8.39.1",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2",
     "wrangler": "^4.50.0"
   },
