--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@types/w3c-image-capture": "^1.0.11",
     "esbuild": "^0.27.0",
     "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.7.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.39.1",
